# collabst

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SETUP.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml
.github/: FUNDING.yml
backend/: .env.example  ARCHITECTURE.md  COLLABORATION.md  Dockerfile.dev  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  main.py  main_dev.py  main_prod.py  pyproject.toml
backend/alembic/versions/: 816cd97554e8_add_refresh_tokens_table.py  add_project_collaborators.py  bcd37cf6076e_add_path_to_assets.py  c3f8e9a2b5d7_add_folder_support.py  c5d8a3b7e9f1_drop_files_content_with_yjs_seed.py  d4e9f1b3c6a8_add_parent_to_assets.py  d9f1a2b3c4d5_replace_username_with_display_name.py  e2a4b6c8d0f1_add_user_polymorphism_and_guest_shares.py
backend/app/api/: auth.py  comments.py  deps.py  files.py  invitations.py  profile_pic.py  projects.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  asset.py  file.py  guest_share.py  invitation.py  project.py  project_collaborator.py  project_share_link.py  refresh_token.py  user.py
backend/app/schemas/: asset.py  collaborator.py  file.py  invitation.py  project.py  user.py
backend/app/services/: permissions.py  storage.py  user_profile.py
backend/app/websocket/: auth.py  yjs_server.py
backend/scripts/: entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh
doc/: DESIGN.md  TECH.md
frontend/: .gitignore  Dockerfile.dev  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend_dev/: .env  package-lock.json  (+2 more)
(+160 files in other folders)
