[project]
name = "backend"
version = "0.1.0"
description = "Typst collaboration platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "y-py>=0.6.0",
    "greenlet>=3.3.0",
]
